agrego informacion relevante y enlaces

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@radix-ui/react-direction": "^1.0.1",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
@@ -21,6 +23,7 @@
     "eslint-config-next": "14.0.2",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
+    "next-intl": "^3.0.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
